--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+#DB
+spring.datasource.url=jdbc:mysql://localhost:3306/mvc_hibernate?verifyServerCertificate=false&useSSL=false&requireSSL=false&useLegacyDatetimeCode=false&useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.username=admin
+spring.datasource.password=admin
 
+#hibernate
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.hbm2ddl.auto=update
+
+#HTTP PUT/PATCH/DELETE
+spring.mvc.hiddenmethod.filter.enabled=true
+
+#log
+logging.level.org.springframework.security=DEBUG
