--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,5 @@ spring.mvc.hiddenmethod.filter.enabled=true
 
 #log
 logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework=debug
+logging.level.org.hibernate=debug
