--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #DB
 spring.datasource.url=jdbc:mysql://localhost:3306/mvc_hibernate?verifyServerCertificate=false&useSSL=false&requireSSL=false&useLegacyDatetimeCode=false&useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username=admin
@@ -8,12 +9,14 @@ spring.datasource.password=admin
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
  spring.jpa.properties.hibernate.default_schema=public
 spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.properties.hibernate.hbm2ddl.auto=update
+spring.jpa.properties.hibernate.hbm2ddl.auto=create-drop
 
 #HTTP PUT/PATCH/DELETE
 spring.mvc.hiddenmethod.filter.enabled=true
 
 #log
 logging.level.org.springframework.security=DEBUG
-logging.level.org.springframework=debug
-logging.level.org.hibernate=debug
+logging.level.org.springframework=DEBUG
+logging.level.org.hibernate=DEBUG
+
+spring.main.allow-circular-references=true
