ошибка зацикленных бинов

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.password=admin
 #hibernate
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
- spring.jpa.properties.hibernate.default_schema=public
+# spring.jpa.properties.hibernate.default_schema=public
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.hbm2ddl.auto=create-drop
 
@@ -15,8 +15,8 @@ spring.jpa.properties.hibernate.hbm2ddl.auto=create-drop
 spring.mvc.hiddenmethod.filter.enabled=true
 
 #log
-logging.level.org.springframework.security=DEBUG
+#logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework=DEBUG
 logging.level.org.hibernate=DEBUG
 
-spring.main.allow-circular-references=true
+#spring.main.allow-circular-references=true
