--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,21 +1,14 @@
-#DB
+spring.application.name=spring-boot_security-demo
+spring.datasource.url=jdbc:mysql://localhost:3306/usersdb?useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.username=root
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/mvc_hibernate?verifyServerCertificate=false&useSSL=false&requireSSL=false&useLegacyDatetimeCode=false&useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
-spring.datasource.username=admin
-spring.datasource.password=admin
 
-#hibernate
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.properties.hibernate.hbm2ddl.auto=create-drop
-
-#HTTP PUT/PATCH/DELETE
+spring.thymeleaf.cache=false
 spring.mvc.hiddenmethod.filter.enabled=true
 
-#log
-#logging.level.org.springframework.security=DEBUG
-logging.level.org.springframework=DEBUG
-logging.level.org.hibernate=DEBUG
-
-#spring.main.allow-circular-references=true
+logging.level.org.springframework.security=DEBUG
